--- a/src/pages/Homes/Section1.css
+++ b/src/pages/Homes/Section1.css
@@ -53,8 +53,20 @@ p{
 
 
 /* media query */
-@media (max-width: 767px){
-    .hero_section .hero_text h1{
+@media (max-width: 767px) {
+    .hero_section .hero_text h1 {
         font-size: 5.5rem;
+    }
+
+    .btn {
+        width: 130px;
+        height: 40px;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 991px) {
+    .hero_section .price_badge {
+        right: 2rem;
     }
 }
