--- a/src/pages/Homes/Section3.css
+++ b/src/pages/Homes/Section3.css
@@ -87,8 +87,66 @@
     background: url("https://png.pngtree.com/thumb_back/fh260/background/20210912/pngtree-fried-chicken-fries-photography-map-image_873422.jpg") no-repeat center center;
     background-size: cover;
 }
-@media (max-width){
-    .menu_section .para{
-        padding: 10px 0px;
+
+.background{
+    background: url("https://i.pinimg.com/originals/c2/94/26/c2942668d5ddfa81cb4181a0b1265251.jpg") no-repeat center center;
+    background-size: cover;
+}
+@media (max-width: 991px) {
+    .menu_section {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .menu_section h2 {
+        font-size: 2.5rem;
+    }
+
+    .menu_section .para {
+        padding: 10px 20px;
+        font-size: 16px;
+    }
+
+    .menu_section .ads_box {
+        padding: 50px 20px;
+    }
+
+    .menu_section .ads_box h4,
+    .menu_section .ads_box h5 {
+        font-size: 1.2rem;
+    }
+
+    .menu_section .add_to_card a {
+        padding: 8px 10px;
+        font-size: 0.9rem;
     }
 }
+
+@media (max-width: 767px) {
+    .menu_section {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .menu_section h2 {
+        font-size: 2rem;
+    }
+
+    .menu_section .para {
+        padding: 10px 15px;
+        font-size: 15px;
+    }
+
+    .menu_section .ads_box {
+        padding: 40px 15px;
+    }
+
+    .menu_section .ads_box h4,
+    .menu_section .ads_box h5 {
+        font-size: 1rem;
+    }
+
+    .menu_section .add_to_card a {
+        padding: 6px 10px;
+        font-size: 0.8rem;
+    }}
